# vk-macos-minimal-screenshot

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: vk-base.cmake  vk-utils.cmake
macos/: MacOSXBundleInfo.plist.in
macos/Resources/: Main.storyboard
macos/Resources/vulkan/: MoltenVK_icd.json
shader/: triangle.vert
src/: DemoViewController.mm  MVKExample.cpp  MVKExample.h  ScreenshotExample.cpp  ScreenshotExample.hpp  VulkanDevice.hpp  VulkanExampleBase.cpp  VulkanExampleBase.h  VulkanInitializers.hpp  VulkanSwapChain.hpp  VulkanTools.cpp  VulkanTools.h  VulkanTools.hpp  camera.hpp
